--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,59 +1,92 @@
 :root {
     --primary-color: #F5F6F8;
-    --card-color: #FFFFFF;
+    --bt-icon-color: rgb(255, 255, 255, 0.45);
+    --card-color: #ffffff;
     --card-border-color: #E7E8EA; 
     --border-color: #B8BAC1; 
-    --text-color-light: #888C95; 
-    --accent-color: #181818; 
+    --text-color-light: #B8BAC1; 
     --text-dark-color: #181818;
+    --bt-color-disabled:#95A3F5;
+    --bt-color-hover:#2B48EC;
+    --bt-color-clicked:#142DB8;
 }
 
+/* Modal */
 .modal {
     display: none;
     position: fixed;
     z-index: 1000;
-    left: 0;
     top: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    overflow: hidden;
-}
-
-.modal h2{
-    font-size: 2.4rem;
-}
-
-.modal p{
-    font-size: 1.2rem;
-    color: var(--text-color-light);
+    animation: slide-in 0.5s ease-out forwards;
 }
 
 .modal-content {
-    background-color: var(--card-color);
-    margin: 10vh auto;
-    padding: 20px;
-    border-radius: 30px;
-    width: 90%;
-    max-width: 400px;
+    background-color: var(--primary-color);
+    margin: 0;
+    padding: 72px;
+    width: 100%;
+    max-width: 600px;
     text-align: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    animation: slide-in-content 0.5s ease-out forwards;
 }
 
+/* Animação de entrada */
+@keyframes slide-in {
+    0% {
+        right: -100%;
+    }
+    100% {
+        right: 0;
+    }
+}
+
+@keyframes slide-in-content {
+    0% {
+        right: -100%;
+    }
+    100% {
+        right: 0;
+    }
+}
+
+/* Responsividade para telas menores */
+@media (max-width: 768px) {
+    .modal-content {
+        width: 100%;
+        height: 100%;
+        border-radius: 0;
+    }
+}
+
+/* Close button */
 .close-btn {
     width: 30px;
     height: 30px;
-
     background-color: var(--accent-color);
-    color: var(--primary-color);
-    border-radius: 100%;
-    
-    float: right;
-    font-size: 28px;
+    color: var(--text-dark-color);
+    border-radius: 50%;
+    border: none;
     cursor: pointer;
+    font-size: 24px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
 
-.close-btn:hover,
-.close-btn:focus {
-    color: var(--text-color-light);
-    text-decoration: none;
+/* Animação de saída */
+@keyframes slide-out {
+    0% {
+        right: 0;
+    }
+    100% {
+        right: -100%;
+    }
 }
