--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #F5F6F8;
-    --bt-icon-color: rgb(255, 255, 255, 0.45);
+    --bt-icon-color: #f5f6f83d;
     --card-color: #ffffff;
     --card-border-color: #E7E8EA; 
     --border-color: #B8BAC1; 
