--- a/styles/modal.css
+++ b/styles/modal.css
@@ -1,14 +1,14 @@
 :root {
     --primary-color: #F5F6F8;
-    --bt-icon-color: rgb(255, 255, 255, 0.45);
+    --bt-icon-color: #f5f6f83d;
     --card-color: #ffffff;
     --card-border-color: #E7E8EA; 
     --border-color: #B8BAC1; 
     --text-color-light: #B8BAC1; 
     --text-dark-color: #181818;
-    --bt-color-disabled:#95A3F5;
-    --bt-color-hover:#2B48EC;
-    --bt-color-clicked:#142DB8;
+    --bt-color-disabled: #95A3F5;
+    --bt-color-hover: #2B48EC;
+    --bt-color-clicked: #142DB8;
 }
 
 /* Modal */
@@ -21,9 +21,18 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    animation: slide-in 0.5s ease-out forwards;
+    /* O background aparece imediatamente sem animação */
+    transition: opacity 0.2s ease-out; /* Transição suave da opacidade */
+    opacity: 0; /* Inicialmente invisível */
 }
 
+/* Quando o modal estiver visível, altera a opacidade */
+.modal.show {
+    display: block;
+    opacity: 1;
+}
+
+/* Conteúdo do modal */
 .modal-content {
     background-color: var(--primary-color);
     margin: 0;
@@ -35,25 +44,28 @@
     top: 0;
     right: 0;
     height: 100%;
-    animation: slide-in-content 0.5s ease-out forwards;
+    
+    /* A animação de entrada continua */
+    animation: slide-in-content 0.2s ease-out forwards;
 }
 
-/* Animação de entrada */
-@keyframes slide-in {
-    0% {
-        right: -100%;
-    }
-    100% {
-        right: 0;
-    }
-}
-
+/* Animação de entrada do conteúdo */
 @keyframes slide-in-content {
     0% {
         right: -100%;
     }
     100% {
         right: 0;
+    }
+}
+
+/* Animação de saída do conteúdo */
+@keyframes slide-out-content {
+    0% {
+        right: 0;
+    }
+    100% {
+        right: -100%;
     }
 }
 
@@ -66,11 +78,13 @@
     }
 }
 
-/* Close button */
+/* Botão de fechar */
 .close-btn {
     width: 30px;
     height: 30px;
-    background-color: var(--accent-color);
+    background-color: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px); 
     color: var(--text-dark-color);
     border-radius: 50%;
     border: none;
@@ -79,14 +93,11 @@
     position: absolute;
     top: 20px;
     right: 20px;
+    transition: background-color 200ms ease-in-out;
 }
 
-/* Animação de saída */
-@keyframes slide-out {
-    0% {
-        right: 0;
-    }
-    100% {
-        right: -100%;
-    }
+.close-btn:hover{
+    background-color: var(--bt-color-hover);
+    color: var(--primary-color);
+    transition: background-color 200ms ease-in-out;
 }
