--- a/styles/form.css
+++ b/styles/form.css
@@ -24,13 +24,18 @@ form label {
     font-weight: 700;
 }
 
-.label-form input::placeholder {
+.label-form {
     font-family: Helvetica;
     font-weight: 700;
     font-size: 32px;
     line-height: 40px;
     letter-spacing: -3%;
 
+    color: var(--text-color-light);
+    opacity: 1;
+}
+
+.label-form input::placeholder {
     color: var(--text-color-light);
     opacity: 1;
 }
