--- a/styles/form.css
+++ b/styles/form.css
@@ -36,8 +36,8 @@ form label {
 }
 
 .label-form input::placeholder {
-    color: var(--text-color-light);
-    opacity: 1;
+    color: #B8BAC1;
+    opacity: 0.5;
 }
 
 .time-schedule {
