--- a/styles/form.css
+++ b/styles/form.css
@@ -35,8 +35,8 @@ form label {
     opacity: 1;
 }
 
-.label-form input::placeholder {
-    color: var(--text-color-light) !important;
+form input::placeholder {
+    color: red !important;
 }
 
 .time-schedule {
