Creating Search modal

--- a/styles/style.css
+++ b/styles/style.css
@@ -72,7 +72,7 @@ nav .about a{
     font-size: 1.8rem;
 }
 
-.search-icon{
+.search-trigger{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,7 +86,7 @@ nav .about a{
     padding: 24px;
 }
 
-.search-icon img {
+.search-trigger img {
     width: 18px;
     height: 18px;
 }
@@ -117,7 +117,7 @@ nav .about a{
     white-space: nowrap;
 }
 
-.search-icon, .menu-date:hover{
+.search-trigger, .menu-date:hover{
     cursor: pointer;
 }
 
@@ -188,31 +188,25 @@ nav .about a{
     display: none;
     width: 100%;
     height: 100%;
-  }
+}
   
   /* Mostra o SVG quando o checkbox estiver marcado */
-  input[type="checkbox"]:checked + .checkmark .check-icon {
+input[type="checkbox"]:checked + .checkmark .check-icon {
     display: block;
-  }
+}
   
   /* Garante que o ::after não apareça mais */
-  .checkmark::after {
+.checkmark::after {
     content: none;
-  }
+}
   
-
 /* Texto azul ao marcar */
 .dropdown-menu li.active span:last-child {
     color: var(--bt-color-clicked);
 }
 
-
-.hidden {
-    display: none;
-}   
-
 .hero {
-    height: 50vh;
+    height: 60vh;
     display: flex;
     align-items: center;
 }
@@ -232,7 +226,6 @@ nav .about a{
     font-weight: 700;
     color: var(--text-dark-color);
 }
-
 
 /* Floating Button */
 .bt-form-container{
