--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,14 @@ body{
     background-color: var(--primary-color);
     font-family: 'Helvetica';
 
-    padding: 0 50px 0 72px;
+    padding: 0 72px 0 72px;
+}
+
+@media (max-width: 768px) {
+    body {
+        background-color: #142DB8;
+        padding: 0 30px 0 30px;
+    }
 }
 
 header {
@@ -45,16 +52,29 @@ nav.menu {
     overflow: visible;
 }  
 
+@media (max-width: 768px) {
+    nav.menu {
+        padding: 10px 30px 10px 30px;
+    }
+}
+
+@media (max-width: 510px) {
+    nav.menu {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+}
+
 nav .about {
-    border: 1px solid rgba(255, 255, 255, 0.3); /* borda leve e translúcida */
-    background-color: rgba(255, 255, 255, 0.15); /* fundo translúcido */
-    backdrop-filter: blur(10px); /* efeito de desfoque */
-    -webkit-backdrop-filter: blur(10px); /* suporte para Safari */
+    border: 1px solid rgba(255, 255, 255, 0.3); 
+    background-color: rgba(255, 255, 255, 0.15); 
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(10px);
 
     padding: 24px;
     border-radius: 100px;
 }
-
 
 nav .about a{
     text-decoration: none;
@@ -105,13 +125,12 @@ nav .about a{
 
     padding: 24px;
     overflow: visible;
-    min-width: 260px;
+    min-width: 200px;
 
     transition: background-color 200ms ease-in-out;
 }
 
 .date-text {
-    /* ✅ Ocupa o restante do espaço */
     flex: 1;
     text-align: left;
     white-space: nowrap;
@@ -132,15 +151,21 @@ nav .about a{
 
     border-radius: 24px;
     border: 1px solid rgba(255, 255, 255, 0.3); 
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: var(--primary-color);
     backdrop-filter: blur(10px); 
     -webkit-backdrop-filter: blur(10px); 
 
     display: flex;
     flex-direction: column;
-
-    /* Remove bullets */
     list-style: none;
+}
+
+@media (max-width: 768px) {
+    .dropdown-menu  {
+        margin-left: -26px;
+        width: 200px;
+        padding: 24px;
+    }
 }
 
 .dropdown-menu li {
@@ -150,6 +175,12 @@ nav .about a{
     padding: 10px 0;
     cursor: pointer;
     transition: color 0.2s;
+}
+
+@media (max-width: 768px) {
+    .dropdown-menu li {
+        font-size: 1.6rem;
+    }
 }
 
 /* Wrapper para checkbox e texto */
@@ -217,6 +248,11 @@ input[type="checkbox"]:checked + .checkmark .check-icon {
     font-weight: 700;
 }
 
+@media (max-width: 768px) {
+    .hero h1{
+        font-size: 7.2rem;
+    }
+}
 .counting-md{
     padding: 24px 0;
 }
