--- a/styles/style.css
+++ b/styles/style.css
@@ -28,8 +28,13 @@ body{
 
 @media (max-width: 768px) {
     body {
-        background-color: #142DB8;
         padding: 0 30px 0 30px;
+    }
+}
+
+@media (max-width: 510px) {
+    body {
+        padding: 0 20px 0 20px;
     }
 }
 
@@ -60,6 +65,7 @@ nav.menu {
 
 @media (max-width: 510px) {
     nav.menu {
+        padding: 10px 20px 10px 20px;
         flex-direction: column;
         align-items: flex-start;
         gap: 10px;
@@ -253,6 +259,12 @@ input[type="checkbox"]:checked + .checkmark .check-icon {
         font-size: 7.2rem;
     }
 }
+
+@media (max-width: 510px) {
+    .hero h1{
+        margin-top: 68px;
+    }
+}
 .counting-md{
     padding: 24px 0;
 }
@@ -291,6 +303,13 @@ input[type="checkbox"]:checked + .checkmark .check-icon {
 
 .bt-form:hover{
     background-color: var(--bt-color-hover);
+}
+
+@media (max-width: 510px) {
+    .bt-form {
+        margin-right: 20px;
+        bottom: 58px;
+    }
 }
 
 /* Empty State */
