--- a/styles/cards.css
+++ b/styles/cards.css
@@ -108,6 +108,7 @@
 
    height: 24px;
    margin-bottom: -3px;
+   padding: 10px;/*modificação*/
 }
 
 .location span{
@@ -123,6 +124,7 @@
 
     height: 24px;
     margin-bottom: -3px;
+    padding: 10px; /*modificação*/
 }
 
 .schedule span{
