--- a/styles/cards.css
+++ b/styles/cards.css
@@ -97,18 +97,11 @@
     font-weight: 400;
 }
 
-.sc-cl{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 16px;
-}
-
 .location img {
    margin-right: 16px;
-
    height: 24px;
-   margin-bottom: -3px;
    min-width: 30px;
+   margin-bottom: -5px;
 }
 
 .location span{
@@ -119,21 +112,27 @@
     letter-spacing: -2%;
 }
 
+.sc-cl{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 16px;
+    display: flex;
+    align-items: end;
+}
+
 .schedule img {
     margin-right: 16px;
 
     height: 24px;
-    margin-bottom: -3px;
     min-width: 30px;
+    margin-bottom: -5px;
 }
 
 .schedule span{
     text-transform: capitalize;
     font-weight: 400;
     font-size: 20px;
-    line-height: 28px;
     letter-spacing: -2%;
-    margin-left: -2px;
 }
 
 .clinic span{
