--- a/styles/modal.css
+++ b/styles/modal.css
@@ -72,8 +72,8 @@
 /* Responsividade para telas menores */
 @media (max-width: 768px) {
     .modal-content {
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
         border-radius: 0;
     }
 }
