--- a/styles/modal.css
+++ b/styles/modal.css
@@ -72,39 +72,6 @@
     }
 }
 
-/* Responsividade para telas menores */
-@media (max-width: 768px) {
-    .modal-content {
-        padding: 24px 16px; /* Padding reduzido para caber melhor */
-        max-width: 100vw;
-        height: 100vh;
-    }
-
-    .label-form,
-    .label-form-schedule,
-    .input-wrapper input[type="text"],
-    form label {
-        font-size: 20px;
-        line-height: 28px;
-    }
-
-    .form-header {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 12px;
-    }
-
-    .time-schedule {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 12px;
-    }
-
-    .time-schedule label {
-        padding: 0;
-    }
-}
-
 .form-header{
     display: flex;
     flex-direction: row;
@@ -149,4 +116,15 @@
     font-size: 16px;
     font-weight: 600;
     transition: background-color 200ms ease-in-out;
+}
+
+
+/* Responsividade para telas menores */
+@media (max-width: 768px) {
+    .modal-content {
+        padding: 24px 16px; /* Padding reduzido para caber melhor */
+        max-width: 92vw;
+        height: 100%;
+        overflow-x: scroll;
+    }
 }
