--- a/styles/form.css
+++ b/styles/form.css
@@ -115,7 +115,7 @@ input[type="date"].label-form:valid {
     flex: 1;
     font-family: Helvetica;
     font-weight: 700;
-    font-size: 32px;
+    font-size: 3.2rem;
     line-height: 40px;
     letter-spacing: -3%;
     color: var(--text-dark-color);
@@ -194,6 +194,10 @@ form input::placeholder {
 
 /* Responsividade para telas menores */
 @media (max-width: 768px) {
+    form input{
+        padding: 10px;
+    }
+
     form label {
         margin: 10px 0 5px;
         font-size: 1.6rem;
@@ -220,5 +224,9 @@ form input::placeholder {
 
     .label-form-schedule{
         font-size: 2.4rem;
+    }
+
+    .clip-icon {
+        margin-left: 0px;
     }
 }
